# vendor_bes

./: LICENSE  README.md  README_zh-cn.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
boards/: CMakeLists.txt  Kconfig
boards/best1700_ep/aos_evb/: 1700_ap_library_release_checkpoint.md  CMakeLists.txt  Kconfig  README.md  README_zh-cn.md  THIRD_PARTY_NOTICES  board_cfg.mk
boards/best1700_ep/aos_evb/cmake/: Toolchain.cmake
boards/best1700_ep/aos_evb/configs/ap/: CMakeLists.txt  Make.defs  _best1000.lds  defconfig
boards/best1700_ep/aos_evb/configs/apc1/: CMakeLists.txt  Make.defs  _best1000.lds  defconfig
boards/best1700_ep/aos_evb/include/: board.h  board_bes1700_evb.h  nsh_romfsimg.h  pm_domain.h  rpmsg_gpio.h
boards/best1700_ep/aos_evb/src/: CMakeLists.txt  Make.defs  ap.c  apc1.c  audio.c  bthcp.c  ota.c  shmem.c  tee.c
boards/best1700_ep/aos_evb/src/etc/: build.prop  txtable.txt
boards/best1700_ep/aos_evb/src/etc/init.d/: rc.sysinit  rc.sysinit.ap  rc.sysinit.apc1  rcS  rcS.ap  rcS.apc1  rcS.audio  rcS.cp  rcS.first  rcS.last  rcS.ota  rcS.tee
boards/best1700_ep/aos_evb/src/etc/media/: criteria.txt  graph.conf  settings.pfw
boards/best1700_ep/common/: Makefile  board  etc
boards/best1700_ep/common/src/: Make.defs
boards/best1700_ep/scripts/: Make.defs
boards/best2003_ep/: .gitignore
boards/best2003_ep/aos_evb/: Kconfig  Readme  board_cfg.mk
boards/best2003_ep/aos_evb/configs/ap/: Make.defs  _best1000.lds  defconfig
boards/best2003_ep/aos_evb/configs/audio/: Make.defs  _armca_psram.lds  defconfig
boards/best2003_ep/aos_evb/configs/bootloader/: Make.defs  defconfig
boards/best2003_ep/aos_evb/configs/ota/: Make.defs  _best1000.lds  defconfig
boards/best2003_ep/aos_evb/include/: board.h  board_bes2003evb.h  nsh_romfsimg.h
boards/best2003_ep/aos_evb/src/: Make.defs  ap.c  audio.c  bes_shim.c  cp.c  ota.c  tee.c
boards/best2003_ep/aos_evb/src/etc/: certificate.der  package.cfg  recovery_reset.sh
boards/best2003_ep/aos_evb/src/etc/app/xmslauncher/: manifest.json
boards/best2003_ep/aos_evb/src/etc/app/xmslvgl/: manifest.json
boards/best2003_ep/aos_evb/src/etc/app/xmsservice/: manifest.json
boards/best2003_ep/aos_evb/src/etc/app/xmswindows/: manifest.json
boards/best2003_ep/aos_evb/src/etc/init.d/: rc.sysinit  rcS  rcS.ap  rcS.audio  rcS.cp  rcS.first  rcS.last  rcS.ota  rcS.tee
boards/best2003_ep/aos_evb/src/etc/media/: configurations.xml  criteria.txt  graph.conf  libraries.xml  settings.pfw  settings.xml  system.xml
boards/best2003_ep/aos_evb/src/etc/ta/: 00F2AA8A5024E411ABE20002A5D5C51B  1C6455C967DD255194BE7F9DCD557595  4EBA9EA8ACF42751AD93A5A4F03E1A67  EE571882BE621355ADAB1B7F23DEFAA6  F1490647578C565BA2C321FD51DC6791  F617ACC99AE5405985D05056DF6BF28B
boards/best2003_ep/aos_evb/src/etc/wifi/: nvram.txt
boards/best2003_ep/aos_evb/src/etc/workday/: unnomal_holiday.cfg  unnomal_workday.cfg
boards/best2003_ep/common/: board  etc
boards/best2003_ep/common/etctmp/etc/: build.prop  rsa_public_key.pem
boards/best2003_ep/common/src/: Make.defs
boards/best2003_ep/scripts/: Make.defs
boards/common/: CMakeLists.txt  Kconfig
boards/common/src/: CMakeLists.txt
chips/bes/: CMakeLists.txt  Kconfig  Make.defs  chip.h
chips/bes/hardware/: bes_lpuart.h
chips/bes/include/: bes1305_gpio.h  bes1306_gpio.h  bes1306p_gpio.h  bes1501_gpio.h  bes1501p_gpio.h  bes1502p_gpio.h  bes1502x_gpio.h  bes1503_gpio.h  bes1503p_gpio.h  bes1600_gpio.h  bes1605_gpio.h  bes1607_gpio.h  bes1700_gpio.h  bes1701_gpio.h  bes1702_gpio.h  bes2001_gpio.h  bes2003_gpio.h  bes2005_gpio.h  bes2009_gpio.h  bes3601_gpio.h  bes3601p_gpio.h  bes_audio_api.h  bes_gpio.h  bes_wl_priv.h  chip.h  debug.h  irq.h  rpmsg_audio.h
chips/besa7/: Kconfig  Make.defs  chip.h
chips/besa7/hardware/: bes_lpuart.h
chips/besa7/include/: bes_gpio.h  debug.h  irq.h
drivers/: Kconfig  Make.defs  Makefile
framework/services/config/chips/: best1700.mk
framework/services/config/nx_bestbsp_ap/: target.mk
framework/services/net/: Makefile
framework/services/net/net_os/: net_atomic.h  net_mutex.h
framework/services/net/utils/: net_defs.h
framework/services/platform/hal/: hal_uart.h
framework/services/services/openamp/open-amp/lib/include/openamp/: remoteproc.h  rpmsg_virtio.h
framework/services/services/openamp/rptun/bes/impl/: rptun_ipc_impl.h  rptun_transq_impl.h
framework/services/tools/: fill_sec_base.pl
readme/: 1700_ap.sh
